examples/expected/check_invalid_type.txt
error[E2001]: type mismatch: expected I64, got Bool
  --> examples/invalid_type.tp:2:15
   |
 2 | 	let x: i64 = true;
   |               ^^^^
